2001-12-28 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* the first ai works now with new scripting
	* improved vdu/messages

	
2001-12-27 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* interpreter:
	  - added script_call_order.cpp

2001-12-26 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* interpreter:
	  - added sort-of classes/instances of modules
	* AI scripting:
	  - first test ai is running (doing nothing)
	  - added modules/ai_test.c , mission/testd/testd_aitest1.mission

	
2001-12-24 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* interpreter:
	  - fixed memory leaks for varInsts
	* AI scripting:
	  - added src/cmd/ai/missionscript.{cpp,h}
	  - modified src/cmd/ai/Makefile.am
	* new AI scripting is used if ainame begins with _ (not working yet)
	

2001-12-22 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* interpreter:
	  - I'm starting to free memory/varInsts
	

2001-12-22 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified Cockpit:
	  - Elite-Style radar
	  - config var graphics/hud/radarType, can be WC or Elite
	  - several 'lines' that get drawn, several config vars
	

2001-12-21 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified Cockpit:
	  - to draw a box around all units
	    config var drawAllTargetBoxes controls that behaviour
	  - to always draw the ITTS (var drawAlwaysITTS)
	  - to use more colors on the radar/the target boxes
	

2001-12-21 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified configure.in
	  - added python1.5 to search for python libs
	  - fixed setting of have_boost_lib
	* modified gfx/vdu.{h,cpp} cockpit_xml.cpp
	  - messages are now displayed in the right VDU
	  - the target-vdu now displays also the FgID

	
2001-12-20 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* callbacks use now ints instead of floats
	* modules/*.c use now also ints
	

2001-12-19 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added _io.printf