@@ -1,3 +1,9 @@
+2001-12-29 Alexander Rawass <alexannika@users.sourceforge.net>
+	
+	* 'fixed' aggressive.cpp
+	   it now uses it's own suborders, instead of the units orders
+	
+	
 2001-12-28 Alexander Rawass <alexannika@users.sourceforge.net>
 	
 	* the first ai works now with new scripting
